--- a/ch2/index.html
+++ b/ch2/index.html
@@ -17,11 +17,14 @@
 
         </nav>
         <h2>What Will I Learn in JCCC’s Web Development and Digital Media Program?</h2>
-        <p>Start a conversation or tell a story using the language of technology.  
+        <p>
+            Start a conversation or tell a story using the language of technology.  
             With just a few semesters of study, you'll gain a deeper understanding of digital workflow,
             web applications, web development and content management — and be ready to launch your new career in web development
-            and digital media.</p>
-        <p>Work in both Windows and Mac to build your toolbox. Start with the basics of HTML, CSS and JavaScript.
+            and digital media.
+        </p>
+        <p>
+            Work in both Windows and Mac to build your toolbox. Start with the basics of HTML, CSS and JavaScript.
              Move on to web scripting for front-end and back-end design 
              and development using PHP, UX, UI, Bootstrap, jQuery and React. 
              Get experience building in WordPress and Drupal content management systems.
@@ -49,12 +52,13 @@
                 <br> <br> <br> <br>
              
         </div>
-   
         <footer> 
-        <small><em> 
-            Copyright &copy; 2022 JCCC Web Development and Digital Media <br>
-            Abigail Cast <a href="mailto:acast@stumail.jccc.edu"> acast@stumail.jccc.edu</a>
-        </em></small>
+            <small>
+                <em> 
+                Copyright &copy; 2022 JCCC Web Development and Digital Media <br>
+                Abigail Cast <a href="mailto:acast@stumail.jccc.edu"> acast@stumail.jccc.edu</a>
+                </em>
+            </small>
         </footer>
     </body>
  </html>
