Spelling Fixes on Hmtls for Midterm

--- a/midterm/combos.html
+++ b/midterm/combos.html
@@ -25,12 +25,12 @@
                 "boss" Monsters with powerful negation, removal, or "floodgate" effects in order
                 to prevent the opponent from being able to do the same but attack them first 
                 as the player going second has the ability to attack first. Combos are then 
-                the most basic mechanics by which the game turns you 5 card oppening hand
-                into a threat formidible enough to win. 
+                the most basic mechanics by which the game turns you 5 card opening hand
+                into a threat formidable enough to win. 
             </p>
             <h2>Documentation</h2>
             <p>
-                Yu-gi-oh uses a variety of repeated game actions which I will be abreviating 
+                Yu-gi-oh uses a variety of repeated game actions which I will be abbreviating 
                 here for the sake of brevity.
             </p>
             <ul>
@@ -51,11 +51,11 @@
                 King 2, Akihiron, Ghattic. Ghattic GY eff ss self. Ghattic field eff add 
                 shleepy. King GY eff add Mementomictlan. Ss Shleepy with hand eff. Make 
                 Twin Dragon with Ghattic and Shleepy. Twin Dragon eff pop self add Horned Dragon
-                and CC. Ss Goblin, ss Ghattic, ss Akihiron. Fusion Gy eff pop akihiron, add 
+                and CC. Ss Goblin, ss Ghattic, ss Akihiron. Fusion Gy eff pop Akihiron, add 
                 Bone Party, Akihiron eff add fusion. Bone Party CC ss Darkblade. Make link monsters
                 with extra effect monsters. Ss Horned Dragon. Ss CC. Set fusion, end phase set boneparty.
             </p>
-            <p>This can also be done by ns dark blade and pop itself for angwitch</p>
+            <p>This can also be done by ns dark blade and pop itself for Angwitch</p>
         </main>
         <footer>
             <small>
