--- a/midterm/index.html
+++ b/midterm/index.html
@@ -19,8 +19,7 @@
             </ul> 
         </nav>
         <main>
-            <h2>What is Mementotlan?</h2>
-            <h3>And furthermore what is Yu-Gi-Oh?</h3>
+            <h2>What is Mementotlan? And furthermore what is Yu-Gi-Oh?</h2>
             <p>
                 Mementotlan is the archetype I play in my current favorite collectable card
                 game, Yu-gi-oh. Yu-gi-oh is a card game in which you play against an opponent
@@ -50,11 +49,11 @@
                 Their main game plan is to fill the graveyard with differently named Mementotlan
                 monsters in order to summon their boss monster, Mementotlan Combined Creation
                 a massive monster with 5000 attack and defense points. From there the deck
-                has cards that allow you to protect it and disrupt the opponent untill you have
-                the opritunity to attack you opponent for massive damage. To get there 
+                has cards that allow you to protect it and disrupt the opponent until you have
+                the opportunity to attack you opponent for massive damage. To get there 
                 Mementotlan uses fusion monsters, and a series of main deck effect monsters
                 allowing for multiple paths to victory to account for variance in your 
-                starting hand, aswell as interuptions from your opponent. 
+                starting hand, as well as interruptions from your opponent. 
             </p>
             <p>Check out more about how the deck plays on the <a href="combos.html">Combos</a> page </p>
         </main>
