--- a/midterm/deckChoice.html
+++ b/midterm/deckChoice.html
@@ -44,8 +44,8 @@
             </p>
             <h2>Non Engine Staples</h2>
             <p> 
-                the ammount of non Engine "staple" cards you want to play depends on
-                a few factors. Those being, how much more than 40 cards you want to play,
+                The amount of non Engine "staple" cards you want to play depends on
+                a few factors such as; how much more than 40 cards you want to play,
                 the size of your secondary engine (if any), and the going second vs going first
                 split you want to make. That being said there are some staples you are going
                 to want to play regardless the top three being. 
@@ -58,21 +58,21 @@
             <p>
                 Maxx "C" is the current strongest card in the Master Duels format so 
                 playing the maxximum (2) copies of it and 5 cards that can stop a Maxx "C"
-                or otherwise interupt your opponent is a wise choice.
+                or otherwise interrupt your opponent is a wise choice.
             </p>
             <h2>Side Engines</h2>
             <p> 
-                while it is possible to play pure Mementotlan, Most decks opt to play a
+                While it is possible to play pure Mementotlan, most decks opt to play a
                 secondary package of cards to supplement the main engine and make the most
                 of the extra deck. I will detail some of the most popular side engines bellow
             </p>
             <h3>Fiendsmith Engine</h3>
             <p>
-                Fiendsmith is a popular engine in almost every deck that doesnt lock itself
+                Fiendsmith is a popular engine in almost every deck that doesn't lock itself
                 and for good reason. The fiendsmith package requires only 5 main deck slots
                 and 5-7 extra deck slots. It is able to turn 2 pieces of extra materials (or excess
-                monsters) into an untargetable bossmonster that negates and outs. Its flexible, 
-                able to play through most interuptions, it recylces its self if the game goes long
+                monsters) into an untargetable boss monster that negates and outs. Its flexible, 
+                able to play through most interruptions, it recycles its self if the game goes long
                 and can work as a backup plan in case your main engine gets stopped before 
                 it can get filling the graveyard. The biggest weakness of fiendsmith are 
                 that it adds 2 bricks (or cards you dont want in your oppening hand) to the Deck
@@ -81,13 +81,13 @@
             </p>
             <h3>Super polymerization</h3>
             <p>
-                While not an engine persay, Super polymerization takes up a large enough
-                Ammount of extra deck slots that it can be classified as one, 3 copies of
+                While not an engine per say, Super polymerization takes up a large enough
+                Amount of extra deck slots that it can be classified as one, 3 copies of
                 super polymerization main deck and 3-5 targets in the extra deck. Super 
                 polymerization is a board breaker allowing you to get around untargetable
                 boss monsters while going second, and going first, is not unusable as you.
                 can use it to fusion summon your extenders. My choice of side engine. Its 
-                main weakness is the large ammount of extra deck space it takes essentially
+                main weakness is the large amount of extra deck space it takes essentially
                 religating it to being the only side engine.
             </p>
             <h3>Berfomet</h3>
@@ -97,7 +97,7 @@
                 Knight and a Diabellze the Original Sinkeeper. Half of this package fits
                 into the fiendsmith package perfectly, allowing for easy synergy there 
                 but it also can be played alone, by getting out Diabellze you can use the 
-                many destruction effects of Mementotlan to esentially negate spells, 
+                many destruction effects of Mementotlan to essentially negate spells, 
                 covering a major weakness of Mementotlan. This combo is difficult to pull 
                 off in a timely manner and requires a ton of attention and rules knowledge
                 but is arguable the strongest way to play fiendsmith.
